# rules_opa_platform

./: README.md  WORKSPACE
my/: BUILD.bazel  main.rego
